Fix in FQN parser
Signed-off-by: Max Shaposhnik <mshaposh@redhat.com>